# NDG_cuda

./: .gitattributes  .gitignore  .travis.yml  CITATION.cff  CMakeLists.txt  README.md  plots.py  sequential.m
.github/workflows/: macos-build-and-test.yml  ubuntu-build-and-test.yml  windows-build-and-test.yml
cmake/: FindCGNS.cmake  SEM-CUDAConfig.cmake.in  SEMConfig.cmake.in  findCGNS.cmake
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst
extras/: CMakeLists.txt
extras/connectivity_plot/: connectivity_plot.py
extras/mesh_generator/: CMakeLists.txt  main.cpp
extras/mesh_partitioner/: CMakeLists.txt  main.cpp  partition_all_meshes.py
extras/mesh_renumberer/: hilbert.py  mesh_renumberer.py
extras/su2_mesh_generator/: su2_mesh_generator.py
include/: ChebyshevPolynomial_host_t.h  ChebyshevPolynomial_t.cuh  Element_host_t.h  Element_t.cuh  Face_host_t.h  Face_t.cuh  LegendrePolynomial_host_t.h  LegendrePolynomial_t.cuh  Mesh2D_t.cuh  Mesh_host_t.h  Mesh_t.cuh  NCG_host_t.h  NDG_host_t.h  NDG_t.cuh  ProgressBar_t.h  device_vector.cuh  float_types.h  sem.cuh  sem.h
include/entities/: Element2D_host_t.h  Element2D_t.cuh  Element2D_t.h  Element2D_t.tcu  Element2D_t.tpp  Element_host_t.h  Element_t.cuh  Element_t.h  Element_t.tcu  Element_t.tpp  Face2D_host_t.h  Face2D_t.cuh  Face2D_t.h  Face_host_t.h  Face_t.cuh  Face_t.h  Mesh2D_t.cuh  NDG_host_t.h  NDG_host_t.tpp  NDG_t.cuh  NDG_t.h  NDG_t.tcu  NDG_t.tpp  Vec2.cuh  Vec2.h  Vec2.tcu  Vec2.tpp  cuda_vector.cuh  cuda_vector.tcu  device_vector.cuh  device_vector.tcu  entities.cuh  entities.h  host_vector.cuh  host_vector.tcu
include/functions/: Hilbert.h  Hilbert_splitting.cuh  Hilbert_splitting.h  Utilities.h  analytical_solution.cuh  analytical_solution.h  analytical_solution.tcu  analytical_solution.tpp  functions.cuh  functions.h  inverse_quad_map.cuh  inverse_quad_map.h  inverse_quad_map.tcu  inverse_quad_map.tpp  quad_map.cuh  quad_map.h  quad_map.tcu  quad_map.tpp  quad_metrics.cuh  quad_metrics.h  quad_metrics.tcu  quad_metrics.tpp
include/helpers/: DataWriter_t.h  InputParser_t.h  ProgressBar_t.h  ProgressBar_t.tpp  constants.cuh  constants.h  float_types.h  helpers.cuh  helpers.h
include/meshes/: Mesh2D_host_t.h  Mesh2D_t.cuh  Mesh2D_t.h  Mesh2D_t.tcu  Mesh2D_t.tpp  Mesh_host_t.h  Mesh_t.cuh  Mesh_t.h  Mesh_t.tcu  Mesh_t.tpp  meshes.cuh  meshes.h
include/polynomials/: ChebyshevPolynomial_host_t.h  ChebyshevPolynomial_t.cuh  ChebyshevPolynomial_t.h  LegendrePolynomial_host_t.h  LegendrePolynomial_t.cuh  LegendrePolynomial_t.h  polynomials.cuh  polynomials.h
include/solvers/: Solver2D_host_t.h  Solver2D_t.cuh  Solver2D_t.h  Solver2D_t.tcu  Solver2D_t.tpp  solvers.cuh  solvers.h
src/: CMakeLists.txt  ChebyshevPolynomial_host_t.cpp  ChebyshevPolynomial_t.cu  Element_host_t.cpp  Element_t.cu  Face_host_t.cpp  Face_t.cu  LegendrePolynomial_host_t.cpp  LegendrePolynomial_t.cu  Mesh2D_t.cu  Mesh_host_t.cpp  Mesh_t.cu  NDG_host_t.cpp  NDG_t.cu  ProgressBar_t.cpp  device_vector.tcu  main.cpp  main.cu
src/entities/: CMakeLists.txt  Element2D_host_t.cpp  Element2D_t.cpp  Element2D_t.cu  Element_host_t.cpp  Element_t.cpp  Element_t.cu  Face2D_host_t.cpp  Face2D_t.cpp  Face2D_t.cu  Face_host_t.cpp  Face_t.cpp  Face_t.cu  Mesh2D_t.cu  NDG_host_t.cpp  NDG_t.cu
src/functions/: CMakeLists.txt  Hilbert.cpp  Hilbert_splitting.cpp  Hilbert_splitting.cu  Utilities.cpp  analytical_solution.cu  inverse_quad_map.cu  quad_map.cu  quad_metrics.cu
src/helpers/: CMakeLists.txt  DataWriter_t.cpp  InputParser_t.cpp  ProgressBar_t.cpp
src/meshes/: CMakeLists.txt  Mesh2D_host_t.cpp  Mesh2D_t.cpp  Mesh2D_t.cu  Mesh_host_t.cpp  Mesh_t.cpp  Mesh_t.cu
src/polynomials/: CMakeLists.txt  ChebyshevPolynomial_host_t.cpp  ChebyshevPolynomial_t.cpp  ChebyshevPolynomial_t.cu  LegendrePolynomial_host_t.cpp  LegendrePolynomial_t.cpp  LegendrePolynomial_t.cu
src/solvers/: CMakeLists.txt  Solver2D_host_t.cpp  Solver2D_t.cpp  Solver2D_t.cu
tests/: 2D_boundary_interpolation_test.cu  2D_interpolation_test.cu  CMakeLists.txt  cpu_gpu_test.cu  element_to_element_interpolation_test.cu  element_to_face_projection_test.cu  face_to_element_projection_test.cu  initial_conditions_test.cu  inverse_quad_mapping_test.cu  polynomials.cu  polynomials_test.cu  quad_mapping_test.cu  reduce_test.cu  test_main.cpp
thesis/: .chktexrc  Uottawa_thesis.cls  colours.sty  colours.tex  glossary_entries.tex  thesis.tex  trad-standard.bbx
thesis/Chapter_abstract/: abstract.tex  abstract2.tex
thesis/Chapter_acknowledgements/: acknowledgements.tex
thesis/Chapter_adaptive_mesh_refinement/: adaptive_mesh_refinement.tex
thesis/Chapter_adaptive_mesh_refinement/code/: plots.py  sem.py
thesis/Chapter_conclusion/: conclusion.tex
thesis/Chapter_graphics_processing_units/: graphics_processing_units.tex
thesis/Chapter_introduction/: introduction.tex
thesis/Chapter_literature_review/: literature_review.tex
thesis/Chapter_load_balancing/: load_balancing.tex
thesis/Chapter_load_balancing/code/: hilbert.py  plots.py
thesis/Chapter_renumbering/: renumbering.tex
thesis/Chapter_results/: results.tex
thesis/Chapter_results/code/: plots.py
thesis/Chapter_spectral_element_method/: spectral_element_method.tex
thesis/Chapter_spectral_element_method/code/: plots.py  sem.py
thesis/Chapter_title/: title_page.tex
thesis/chapter_hybrid_solver/: hybrid_solver.tex
thesis/chapter_hybrid_solver/media/: hybrid_solver.tex
thesis/reference/: reference.bib
thesis/references/: references.bib
